...
  let end = props.state.end;
  let startM = moment(start);
  let endM = moment(end);
  let cancelByTime = moment(start).add(-1 * selectedSpace.cancellationPolicy.numberOfHours, 'hours').format('DD MMM YYYY, h a')

  const needHostConfirm = async () => {
    Alert.alert('Requires host confirmation', 'We will send you a confirmation when the host accepts the booking.',
      [{
        text: 'Cancel',
        onPress: () => null
      }, {
        text: 'Proceed',
        onPress: () => onSubmit()
      }]);
  }

  const onSubmit = async () => {
    const networkState = await Network.getNetworkStateAsync();
    if (networkState.isConnected) {
      // Device is connected to the internet
      setLoading(true)
      // console.log(selectedSpace.id, start, end, bookingId, courtId)
      createBooking(selectedSpace.id, start, end, courtId, periodPrice)
        .then(async () => {
          Alert.alert('Success', selectedSpace.needHostConfirm ? 'Your booking is now pending host confirmation.' : 'The payment was confirmed successfully.', [{
            text: 'Ok',
            onPress: () => props.navigation.navigate('Home', { screen: 'Home ' })
          }]);
          setLoading(false);
        })
        .catch((e) => {
          Alert.alert('Error', e.message, [{
            text: 'Ok',
            onPress: () => {
              // Gets the amount to top up from the error message
              const amount = e?.message?.split("SGD ")[1]?.slice(0, -1)
              // Lack of money in wallet, navigate to topup
              if (amount) props.navigation.navigate("TopUp ", { requiredTopUp: amount, requiredAmt: calcTotal() })
...
        <MainWrapper>
          <Flex>
            <View>
              <Typography.Cap color={colors.gray}>
                {selectedSpace.spaceType}
              </Typography.Cap>
              <View testID="reservation-cost" style={{ marginVertical: 5 }}>
                <Typography.Sub1>${calcTotal()}</Typography.Sub1>
              </View>
              {selectedSpace.ratingCount == 0 ? null :
                <IconLabel.FA
                  icon="star"
                  label={(selectedSpace.ratingTotal / selectedSpace.ratingCount).toFixed(2)}
...
              <Typography.Sub1 bold color={colors.blue}>   {courtLabel}   </Typography.Sub1>
            </ModalSelector>*/}
          </Flex>
          {/* -------------- */}
          <HLine />
          <View>
            <View testID="fee-information" style={{ marginTop: 20, marginHorizontal: 20 }}>
              <Typography.Cap color={colors.gray}>
                Fee and tax information
              </Typography.Cap>
            </View>
            <Flex>
              <Typography.Sub1>Booking fee</Typography.Sub1>
...
          </View>

        </MainWrapper>
      </Detail>
      <Reserve>
        <Button.BtnContain
          testID="book-now-button"
          label={selectedSpace.needHostConfirm ? "Request Booking" : "Book now"}
          // color={(loading || !paymentSheetEnabled) ? colors.lightgray : colors.red}
          // disabled={loading || !paymentSheetEnabled}
          color={loading ? colors.lightgray : colors.red}
          disabled={loading}
          onPress={() => selectedSpace.needHostConfirm
...
