...
      <NavBar nav="chevron-left" onPress={() => props.navigation.navigate('Home')} />
      <Detail>
        <View style={[{ padding: 10, alignItems: 'center' }]}>
          <Typography.H4>When do you wanna start playing?</Typography.H4>
          <View style={{ flexDirection: 'row', marginTop: 10, marginBottom: 10, borderWidth: 1, borderColor: colors.lightgray, borderRadius: 8, width: '75%', justifyContent: 'center', }}>
            <ButtonA.BtnDateTime
              testID="open-date-picker"
              label={`${moment(startDateTime).format("DD MMM YYYY")}`}
              onPress={() => showDatePicker('date')}
            />
            <ButtonA.BtnDateTime
              testID="open-time-picker"
              label={`${moment(startDateTime).format("hA")}`}
              onPress={() => showDatePicker('time')}
            />
            <DateTimePickerModal
              isVisible={isDatePickerVisible}
              date={startDateTime}
...
              themeVariant={isDark ? 'dark' : 'light'}
              onConfirm={handleConfirm}
              onCancel={hideDatePicker}
            />
          </View>
          <Typography.H4>For how long?</Typography.H4>
          <View testID="duration-picker" style={[{ marginTop: 10, marginBottom: 10, width: '75%' }]}>
            <AppPicker
              selectedItem={duration}
              onSelectItem={(item) => setDuration(item)}
              items={DURATION}
              placeholder={""}
              icon="chevron-down"
...
      </Detail>
      <Next>
        <Left>
        </Left>
        <BtnContainer>
          <ButtonA.BtnContain
            testID="search-listings-button"
            label="Next"
            color={colors.red}
            size="small"
            disabled={false}
            onPress={() => onNavigate()}
          />
...
